--- a/style.css
+++ b/style.css
@@ -1,7 +1,94 @@
-#container_main {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  margin: -70px 0 0 -170px;
+* {
+  /* border: 1px dashed blue; */
+  padding: 0;
+  margin: 0;
 }
 
+a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 8px;
+  color: black;
+  font-family: Arial;
+  font-size: 14px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  display: inline;
+  float: right;
+  padding: 5px;
+  text-align: center;
+}
+
+#shadi {
+  border-radius: 100%;
+}
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -50px 0 0 -200px;
+}
+
+.mytext {
+  height: 26px;
+  width: 566px;
+}
+
+.button_s {
+  color: #757575;
+  border: 1px solid #f2f2f2;
+  border-radius: 2px;
+  background-color: #f5f5f5;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: Arial, sans serif;
+  display: block;
+  float: left;
+  width: 126px;
+  height: 36px;
+}
+
+.button_l {
+  color: #757575;
+  border: 1px solid #f2f2f2;
+  border-radius: 2px;
+  background-color: #f5f5f5;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: Arial, sans serif;
+  display: block;
+  float: right;
+  width: 126px;
+  height: 36px;
+}
+
+.button-holder {
+  width: 275px;
+  margin: 0 auto;
+}
+
+#footer {
+  background-color: #f2f2f2;
+  border-top: 2px solid #e4e4e4;
+  height: 40px;
+  clear: both;
+  position: relative;
+  margin-top: 215px;
+  width: 100%;
+}
+
+#bottomleft {
+  float: left;
+  margin-left: 30px;
+}
+
+#bottomright {
+  float: right;
+  margin-right: -30px;
+}
