--- a/style.css
+++ b/style.css
@@ -74,21 +74,20 @@ li {
 }
 
 #footer {
-  background-color: #f2f2f2;
-  border-top: 2px solid #e4e4e4;
-  height: 40px;
-  clear: both;
-  position: relative;
-  margin-top: 215px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
+  height: 31px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1)
 }
 
 #bottomleft {
   float: left;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 #bottomright {
   float: right;
-  margin-right: -30px;
+  margin-right: 0px;
 }
